tests/ui/invalid_pyfunction_argument.stderr
error[E0277]: `AtomicPtr<()>` cannot be used as a Python function argument
   --> tests/ui/invalid_pyfunction_argument.rs:5:37
    |
  5 | fn invalid_pyfunction_argument(arg: AtomicPtr<()>) {
    |                                     ^^^^^^^^^ the trait `PyClass` is not implemented for `AtomicPtr<()>`
    |
    = note: implement `FromPyObject` to enable using `AtomicPtr<()>` as a function argument
    = note: `Python<'py>` is also a valid argument type to pass the Python token into `#[pyfunction]`s and `#[pymethods]`
help: the trait `PyClass` is implemented for `Foo`
   --> tests/ui/invalid_pyfunction_argument.rs:12:1
    |
 12 | #[pyclass(skip_from_py_object)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: required for `AtomicPtr<()>` to implement `FromPyObject<'_, '_>`
    = note: required for `AtomicPtr<()>` to implement `pyo3::impl_::extract_argument::PyFunctionArgument<'_, '_, '_, true>`
note: required by a bound in `pyo3::impl_::extract_argument::extract_argument`
   --> src/impl_/extract_argument.rs:226:8
    |
220 | pub fn extract_argument<'a, 'holder, 'py, T, const IMPLEMENTS_FROMPYOBJECT: bool>(
    |        ---------------- required by a bound in this function
...
226 |     T: PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `extract_argument`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `AtomicPtr<()>` cannot be used as a Python function argument
   --> tests/ui/invalid_pyfunction_argument.rs:5:37
    |
  5 | fn invalid_pyfunction_argument(arg: AtomicPtr<()>) {
    |                                     ^^^^^^^^^ the trait `Clone` is not implemented for `AtomicPtr<()>`
    |
    = note: implement `FromPyObject` to enable using `AtomicPtr<()>` as a function argument
    = note: `Python<'py>` is also a valid argument type to pass the Python token into `#[pyfunction]`s and `#[pymethods]`
help: the following other types implement trait `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>`
   --> src/impl_/extract_argument.rs:92:1
    |
 92 | / impl<'a, 'holder, 'py, T: 'a + 'py> PyFunctionArgument<'a, 'holder, 'py, false>
 93 | |     for &'holder Bound<'py, T>
 94 | | where
 95 | |     T: PyTypeCheck,
    | |___________________^ `&'holder pyo3::Bound<'py, T>` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, false>`
...
113 | / impl<'a, 'holder, 'py, T> PyFunctionArgument<'a, 'holder, 'py, false> for Option<T>
114 | | where
115 | |     T: PyFunctionArgument<'a, 'holder, 'py, false>,
    | |___________________________________________________^ `Option<T>` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, false>`
...
175 |   impl<'a, 'holder, T: PyClass> PyFunctionArgument<'a, 'holder, '_, false> for &'holder T {
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&'holder T` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, '_, false>`
...
188 | / impl<'a, 'holder, T: PyClass<Frozen = False>> PyFunctionArgument<'a, 'holder, '_, false>
189 | |     for &'holder mut T
    | |______________________^ `&'holder mut T` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, '_, false>`
    = note: required for `AtomicPtr<()>` to implement `FromPyObject<'_, '_>`
    = note: required for `AtomicPtr<()>` to implement `pyo3::impl_::extract_argument::PyFunctionArgument<'_, '_, '_, true>`
note: required by a bound in `pyo3::impl_::extract_argument::extract_argument`
   --> src/impl_/extract_argument.rs:226:8
    |
220 | pub fn extract_argument<'a, 'holder, 'py, T, const IMPLEMENTS_FROMPYOBJECT: bool>(
    |        ---------------- required by a bound in this function
...
226 |     T: PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `extract_argument`

error[E0277]: `AtomicPtr<()>` cannot be used as a Python function argument
   --> tests/ui/invalid_pyfunction_argument.rs:5:37
    |
  5 | fn invalid_pyfunction_argument(arg: AtomicPtr<()>) {
    |                                     ^^^^^^^^^ the trait `pyo3::impl_::pyclass::ExtractPyClassWithClone` is not implemented for `AtomicPtr<()>`
    |
    = note: implement `FromPyObject` to enable using `AtomicPtr<()>` as a function argument
    = note: `Python<'py>` is also a valid argument type to pass the Python token into `#[pyfunction]`s and `#[pymethods]`
help: the following other types implement trait `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>`
   --> src/impl_/extract_argument.rs:92:1
    |
 92 | / impl<'a, 'holder, 'py, T: 'a + 'py> PyFunctionArgument<'a, 'holder, 'py, false>
 93 | |     for &'holder Bound<'py, T>
 94 | | where
 95 | |     T: PyTypeCheck,
    | |___________________^ `&'holder pyo3::Bound<'py, T>` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, false>`
...
113 | / impl<'a, 'holder, 'py, T> PyFunctionArgument<'a, 'holder, 'py, false> for Option<T>
114 | | where
115 | |     T: PyFunctionArgument<'a, 'holder, 'py, false>,
    | |___________________________________________________^ `Option<T>` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, false>`
...
175 |   impl<'a, 'holder, T: PyClass> PyFunctionArgument<'a, 'holder, '_, false> for &'holder T {
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&'holder T` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, '_, false>`
...
188 | / impl<'a, 'holder, T: PyClass<Frozen = False>> PyFunctionArgument<'a, 'holder, '_, false>
189 | |     for &'holder mut T
    | |______________________^ `&'holder mut T` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, '_, false>`
    = note: required for `AtomicPtr<()>` to implement `FromPyObject<'_, '_>`
    = note: required for `AtomicPtr<()>` to implement `pyo3::impl_::extract_argument::PyFunctionArgument<'_, '_, '_, true>`
note: required by a bound in `pyo3::impl_::extract_argument::extract_argument`
   --> src/impl_/extract_argument.rs:226:8
    |
220 | pub fn extract_argument<'a, 'holder, 'py, T, const IMPLEMENTS_FROMPYOBJECT: bool>(
    |        ---------------- required by a bound in this function
...
226 |     T: PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `extract_argument`

error[E0277]: `Foo` cannot be used as a Python function argument
   --> tests/ui/invalid_pyfunction_argument.rs:17:59
    |
 17 | fn skip_from_py_object_without_custom_from_py_object(arg: Foo) {
    |                                                           ^^^ unsatisfied trait bound
    |
help: the trait `pyo3::impl_::pyclass::ExtractPyClassWithClone` is not implemented for `Foo`
   --> tests/ui/invalid_pyfunction_argument.rs:14:1
    |
 14 | struct Foo;
    | ^^^^^^^^^^
    = note: implement `FromPyObject` to enable using `Foo` as a function argument
    = note: `Python<'py>` is also a valid argument type to pass the Python token into `#[pyfunction]`s and `#[pymethods]`
help: the following other types implement trait `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>`
   --> src/impl_/extract_argument.rs:92:1
    |
 92 | / impl<'a, 'holder, 'py, T: 'a + 'py> PyFunctionArgument<'a, 'holder, 'py, false>
 93 | |     for &'holder Bound<'py, T>
 94 | | where
 95 | |     T: PyTypeCheck,
    | |___________________^ `&'holder pyo3::Bound<'py, T>` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, false>`
...
113 | / impl<'a, 'holder, 'py, T> PyFunctionArgument<'a, 'holder, 'py, false> for Option<T>
114 | | where
115 | |     T: PyFunctionArgument<'a, 'holder, 'py, false>,
    | |___________________________________________________^ `Option<T>` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, false>`
...
175 |   impl<'a, 'holder, T: PyClass> PyFunctionArgument<'a, 'holder, '_, false> for &'holder T {
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&'holder T` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, '_, false>`
...
188 | / impl<'a, 'holder, T: PyClass<Frozen = False>> PyFunctionArgument<'a, 'holder, '_, false>
189 | |     for &'holder mut T
    | |______________________^ `&'holder mut T` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, '_, false>`
    = note: required for `Foo` to implement `FromPyObject<'_, '_>`
    = note: required for `Foo` to implement `pyo3::impl_::extract_argument::PyFunctionArgument<'_, '_, '_, true>`
note: required by a bound in `pyo3::impl_::extract_argument::extract_argument`
   --> src/impl_/extract_argument.rs:226:8
    |
220 | pub fn extract_argument<'a, 'holder, 'py, T, const IMPLEMENTS_FROMPYOBJECT: bool>(
    |        ---------------- required by a bound in this function
...
226 |     T: PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `extract_argument`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
